# image-tools

./: .gitignore  README.txt
edge-detection/cpp/: CMakeLists.txt
edge-detection/cpp/src/: main.cpp
edge-detection/python/: main.py
edgeDetection/: README.txt
edgeDetection/cpp/src/: main.cpp
edgeDetection/python/: main.py
